--- a/UI/appsettings.json
+++ b/UI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MeetupDatabase": "Server=localhost;Database=master;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost;Database=meetups;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
