--- a/UI/appsettings.json
+++ b/UI/appsettings.json
@@ -8,5 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=meetups;Trusted_Connection=True;TrustServerCertificate=True;"
-  }
+  },
+  "Audience": "meetupApi",
+  "Authority": "http://localhost:5100"
 }
